--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.16",
-    "eslint": "8.55.0",
     "eslint-config-next": "13.4.16",
     "next": "13.4.16",
     "postcss": "8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.6"
+  },
+  "devDependencies": {
+    "eslint": "^8.55.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.3.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2"
   }
 }
