--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "autoprefixer": "10.4.16",
     "eslint-config-next": "13.4.16",
     "next": "13.4.16",
