--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
+    "@headlessui/react": "1.7.17",
     "autoprefixer": "10.4.16",
     "eslint-config-next": "13.4.16",
+    "framer-motion": "10.16.16",
     "next": "13.4.16",
     "postcss": "8.4.32",
     "react": "18.2.0",
